PFBundles: Create /user-tasks route
