# openapi.yaml
@@ -915,7 +915,7 @@ paths:
                 500:
                     $ref: '#/components/responses/500'
 
-    /api/user-task:
+    /api/user-tasks:
         get:
             tags: [ UserTask ]
             responses:
@@ -1597,15 +1597,64 @@ components:
                             items:
                                 type: array
                                 items:
-                                    $ref: '#/components/schemas/UserTaskGridItem'
-                            count:
-                                type: integer
-                            total:
-                                type: integer
-                            limit:
-                                type: integer
-                            offset:
-                                type: integer
+                                    type: object
+                                    properties:
+                                        id:
+                                            type: string
+                                        nodeId:
+                                            type: string
+                                        topologyId:
+                                            type: string
+                                        correlationId:
+                                            type: string
+                                        created:
+                                            type: string
+                                            format: date-time
+                                        message:
+                                            type: string
+                                            nullable: true
+                            search:
+                                type: string
+                                nullable: true
+                            filter:
+                                type: array
+                                items:
+                                    type: array
+                                    items:
+                                        type: object
+                                        properties:
+                                            column:
+                                                type: string
+                                            operator:
+                                                type: string
+                                            value:
+                                                type: array
+                                                items:
+                                                    type: string
+                            sorter:
+                                type: array
+                                items:
+                                    type: object
+                                    properties:
+                                        column:
+                                            type: string
+                                        direction:
+                                            type: string
+                            paging:
+                                type: object
+                                properties:
+                                    itemsPerPage:
+                                        type: integer
+                                    lastPage:
+                                        type: integer
+                                    nextPage:
+                                        type: integer
+                                    page:
+                                        type: integer
+                                    previousPage:
+                                        type: integer
+                                    total:
+                                        type: integer
 
         Empty:
             description: ''
